--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = ">=3.10, <3.12"
 configilm = {extras = ["full"], version = "^0.6.3"}
 wandb = "^0.17.1"
-torch = "^2.2.0"
+torch = "~2.2.0"
 
 
 [build-system]
