--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.10, <3.12"
 configilm = {extras = ["full"], version = "^0.6.3"}
 wandb = "^0.17.1"
 numpy = "^1.26.4"
+torch = "~2.0.0"
 
 
 [build-system]
