using cuda 11 instead

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,14 @@ python = ">=3.10, <3.12"
 configilm = { extras = ["full"], version = "^0.6.3" }
 wandb = "^0.17.1"
 numpy = "^1.26.4"
+torch = {version = "^2.3.1+cu118", source = "pytorch-gpu-src"}
+torchvision = {version = "^0.18.1+cu118", source = "pytorch-gpu-src"}
+torchaudio = {version = "^2.3.1+cu118", source = "pytorch-gpu-src"}
+
+[[tool.poetry.source]]
+name = "pytorch-gpu-src"
+url = "https://download.pytorch.org/whl/cu118"
+priority = "explicit"
 
 [build-system]
 requires = ["poetry-core"]
