--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = ">=3.10, <3.12"
 configilm = { extras = ["full"], version = "^0.6.5" }
 wandb = "^0.17.1"
 numpy = "^1.26.4"
+
+## uncomment for cuda 11
 # torch = "2.2.2"
 # torch = { version = "2.2.2+cu118", source = "pytorch-gpu-src" }
 # torchvision = { version = "0.17.2+cu118", source = "pytorch-gpu-src" }
