--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "ben-publication"
+name = "reben-publication"
 version = "0.1.0"
 description = ""
 authors = ["leonard <l.hackel@tu-berlin.de>"]
