frozen dinov3 & linear probing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.10, <3.12"
 configilm = { extras = ["full"], version = "^0.7.0" }
 wandb = "^0.17.1"
 numpy = "^1.26.4"
+transformers = "^4.40.0"
 
 ## uncomment for cuda 11
 # torch = "2.2.2"
